# discord-rs-example

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: mod.rs  register.rs  say.rs  stats.rs
src/events/: message.rs  mod.rs  ready.rs
