[package]
name = "discord-rs-example"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
